added myself to team page

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -82,9 +82,10 @@
                     <div class="popup">
                         <h4>Jan-Kees Van Andel</h4>
 
-                        <p></p>
+                        <p>Software Architect @Jpoint, addicted to web, Java, performance and all that's new.</p>
 
                         <div class="links clearfix">
+                            <a href="https://www.facebook.com/jankees.vanandel" class="btn_facebook">Facebook</a>
                             <a href="http://nl.linkedin.com/in/jankeesvanandel" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/jankeesvanandel" class="btn_twitter">Twitter</a>
                         </div>
