Improve sponsors look and feel

--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -402,3 +402,9 @@ a.btn_delete:hover {
     padding-top: 20px;
     padding-bottom: 20px;
 }
+#sponsors .img_wrapper {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
