Fixes #29 Submit new proposal doesn't do anything

--- a/app/views/speaker/proposal_form.html
+++ b/app/views/speaker/proposal_form.html
@@ -103,7 +103,7 @@
                         </li>
 
                         <li>
-                            <label for="talkAddTag">Tags</label>
+                            <label for="talkAddTag">Tags<br> (min 3, max 8)</label>
                             <input id="talkAddTag"
                                    name="addTag"
                                    type="text"
