--- a/app/views/speaker/speaker_details.html
+++ b/app/views/speaker/speaker_details.html
@@ -5,7 +5,7 @@
         <ul>
 
             <li style="padding: 15px 0 0 0" ng-show="model.speakerDetails.id">
-                <div class="icon" ng-style="{ background: thumbnailUrl() }" style="cursor: pointer; background: url({{thumbnailUrl()}})" ng-click="uploadThumb()">
+                <div class="icon" ng-style="{ background: thumbnailUrl() }" style="display:inline; background: url({{thumbnailUrl()}})" ng-click="uploadThumb()"></div>
             </li>
 
             <li>
