Corrected Latest News item dates

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -95,29 +95,6 @@
                 
             </div>                  
         </li>
-<!--         <li>
-            <div class="grid">
-            
-                <div class="row">           
-                    <div class="col9 content">
-                    
-                        <h1>What you didn't know about HTML5</h1>
-                        <h3>Tracks 2013</h3>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">Link here</a>
-                        
-                    </div>
-                    <div class="col11">
-                    
-                        <img src="images_dummy/slide_03.png" class="visual" alt="Be born again">
-                    
-                    </div>
-                </div>
-                
-            </div>                  
-        </li>
- -->    </ul>
-
 </div>
 
 
@@ -156,7 +133,7 @@
         <ul class="newsList clearfix" news>
             <li>
                 <a href="#about"><img src="../images/news/site.png" alt=""></a>
-                    <div class="date">3 June '13</div>
+                    <div class="date">6 June '13</div>
                     <h4>New site</h4>
                     <p>Hope you like our brand new website?<br>It's built using AngularJS and the call for papers is available on 
                         <a href="http://github.com/devoxx">github.com/devoxx</a>, we accept pull requests!
@@ -166,7 +143,7 @@
             <li>
 
                     <img src="../images/news/call4papers.png" alt="Call For Papers" />
-                    <div class="date">3 June '13</div>
+                    <div class="date">6 June '13</div>
                     <h4>Call For Papers Now Open</h4>
                     <p>The CFP for Devoxx Belgium 2013 is now open and closes end of June.
                     </br>Please login and submit your talks and help us shape another awesome conference.</p>
@@ -175,7 +152,7 @@
             <li>
                 <!--<a href="#">-->
                     <img src="../images/news/registration.png" alt="Devoxx Registrations" />
-                    <div class="date">3 June '13</div>
+                    <div class="date">6 June '13</div>
                     <h4>Registrations Open Soon</h4>
                     <p>As always we under-estimated the work on our new website including the new Call For Papers module.
                        We expect to open Devoxx registrations by the end of June.</p>
@@ -184,7 +161,7 @@
             <li>
                 <!--<a href="#">-->
                     <img src="../images/news/borntobe.png" alt="Born To Be" />
-                <div class="date">3 June '13</div>
+                <div class="date">6 June '13</div>
                     <h4>New Devoxx Theme</h4>
                     <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
                 <!--</a>-->
@@ -193,16 +170,16 @@
             <li>
                 <a href="http://www.devoxx.com/display/UK13/Home">
                 <img src="../images/news/DevoxxUK-2013.jpg" alt="The Devoxx UK team" />
-                <div class="date">30 March '13</div>
+                <div class="date">29 March '13</div>
                 <h4>First Devoxx UK</h4>
-                <p>The inaugural Devoxx UK, about 500 developers experienced the Devoxx atmosphere in Londen. More than enough to call it a success, but more info about this later. 
+                <p>The inaugural Devoxx UK, about 500 developers experienced the Devoxx atmosphere in London. More than enough to call it a success, but more info about this later.
                 </p>
                 </a>
             </li>
             <li>
                 <a href="http://www.devoxx.com/display/FR13/Accueil">
                 <img src="../images/news/DevoxxFR-2013.jpg" alt="The Devoxx FR team" />
-                <div class="date">29 March '13</div>
+                <div class="date">28 March '13</div>
                 <h4>Devoxx FR on rails</h4>
                 <p>The second Devoxx France edition was a blast, close to 1500 'Frenchy' developers landed in Paris for a week of Devoxx geekery. The demand for Devoxx FR tickets is so high that we'll need to find a bigger venue next year.
                 </p>
