- Added Geerts picture - Added Newsletter link

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -438,7 +438,7 @@
                     </div>
                 </li>
                 <li class="Program">
-                    <div class="icon" style="background: url('../../images/team/NoImage.jpg') no-repeat center;"></div>
+                    <div class="icon" style="background: url('../../images/team/GeertVanlandegem.jpg') no-repeat center;"></div>
                     <h4>Geert Van Landeghem</h4>
 
                     <div class="popup">
