Correction of typeo's

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -59,7 +59,7 @@
                 <div class="row">           
                     <div class="col9 content">
                     
-                        <h1>What's new in Andriod</h1>
+                        <h1>What's new in Android</h1>
                         <h3>Tracks 2013</h3>
                         <p>Android is the largest mobile platform in use today, come learn about the latest updates from Googlers or passionate member of it's ever growing community</p>
                         <a href="#/" class="btn" scroll="tracks">All tracks</a>
@@ -82,7 +82,7 @@
                     
                         <h1>What you didn't know about HTML5</h1>
                         <h3>Tracks 2013</h3>
-                        <p>Learn about the new breed of JS webframeworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
+                        <p>Learn about the new breed of JS web frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
                         <a href="#/" class="btn" scroll="tracks">All tracks</a>
                         
                     </div>
@@ -145,7 +145,7 @@
                     <img src="../images/news/call4papers.png" alt="Call For Papers" />
                     <div class="date">6 June '13</div>
                     <h4>Call For Papers Now Open</h4>
-                    <p>The CFP for Devoxx Belgium 2013 is now open and closes end of June.
+                    <p>The CFP for Devoxx Belgium 2013 is now open and closes July 5th.
                     </br>Please login and submit your talks and help us shape another awesome conference.</p>
 
             </li>
