--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -199,7 +199,7 @@
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/alexvanboxel‎" class="btn_linkedin">LinkedIn</a>
-                            <a href="https://twitter.com/alexvb‎" class="btn_twitter">Twitter</a>
+                            <a href="https://twitter.com/alexvb" class="btn_twitter">Twitter</a>
                         </div>
                     </div>
                 </li>
@@ -272,7 +272,6 @@
                         <p>GlassFish and Java EE Principal Product Manager at Oracle</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/pub/david-delabassee/13/48b/999" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/delabassee" class="btn_twitter">Twitter</a>
                             <a href="mailto:david.delabassee@gmail.com" class="btn_mail">Mail me</a>
@@ -433,7 +432,7 @@
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/stevenn‎" class="btn_linkedin">LinkedIn</a>
-                            <a href="https://twitter.com/stevenn‎" class="btn_twitter">Twitter</a>
+                            <a href="https://twitter.com/stevenn" class="btn_twitter">Twitter</a>
                         </div>
                     </div>
                 </li>
