removed invisible copy-paste characters from team page

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -184,7 +184,7 @@
         <div class="links clearfix">
             <a href="https://www.facebook.com/javafox" class="btn_facebook">Facebook</a>
             <a href="http://be.linkedin.com/in/johanvos" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/johanvos‎" class="btn_twitter">Twitter</a>
+            <a href="https://twitter.com/johanvos" class="btn_twitter">Twitter</a>
             <a href="mailto:johan.vos@lodgon.com" class="btn_mail">Mail me</a>
         </div>
     </div>
@@ -199,7 +199,7 @@
         <p></p>
 
         <div class="links clearfix">
-            <a href="http://be.linkedin.com/in/alexvanboxel‎" class="btn_linkedin">LinkedIn</a>
+            <a href="http://be.linkedin.com/in/alexvanboxel" class="btn_linkedin">LinkedIn</a>
             <a href="https://twitter.com/alexvb" class="btn_twitter">Twitter</a>
         </div>
     </div>
@@ -242,8 +242,8 @@
         <p></p>
 
         <div class="links clearfix">
-            <a href="http://be.linkedin.com/pub/luc-duponcheel/1/366/6b7‎" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/LucDup‎" class="btn_twitter">Twitter</a>
+            <a href="http://be.linkedin.com/pub/luc-duponcheel/1/366/6b7" class="btn_linkedin">LinkedIn</a>
+            <a href="https://twitter.com/LucDup" class="btn_twitter">Twitter</a>
         </div>
     </div>
 </li>
@@ -258,7 +258,7 @@
 
         <div class="links clearfix">
             <a href="http://be.linkedin.com/in/danieldeluca" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/danieldeluca‎" class="btn_twitter">Twitter</a>
+            <a href="https://twitter.com/danieldeluca" class="btn_twitter">Twitter</a>
             <a href="mailto:daniel.deluca@devoxx.com" class="btn_mail">Mail me</a>
         </div>
     </div>
@@ -290,8 +290,8 @@
 
         <div class="links clearfix">
             <a href="#" class="btn_facebook">Facebook</a>
-            <a href="http://uk.linkedin.com/in/dhardiker‎" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/dhardiker‎" class="btn_twitter">Twitter</a>
+            <a href="http://uk.linkedin.com/in/dhardiker" class="btn_linkedin">LinkedIn</a>
+            <a href="https://twitter.com/dhardiker" class="btn_twitter">Twitter</a>
         </div>
     </div>
 </li>
@@ -322,7 +322,7 @@
 
         <div class="links clearfix">
             <a href="https://www.facebook.com/steveonjava" class="btn_facebook">Facebook</a>
-            <a href="http://www.linkedin.com/in/steveonjava‎" class="btn_linkedin">LinkedIn</a>
+            <a href="http://www.linkedin.com/in/steveonjava" class="btn_linkedin">LinkedIn</a>
             <a href="https://twitter.com/steveonjava" class="btn_twitter">Twitter</a>
             <a href="mailto:steveonjava@gmail.com" class="btn_mail">Mail me</a>
         </div>
@@ -386,7 +386,7 @@
 
         <div class="links clearfix">
             <a href="http://www.linkedin.com/pub/dir/Mike/Seghers" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/mikeseghers‎" class="btn_twitter">Twitter</a>
+            <a href="https://twitter.com/mikeseghers" class="btn_twitter">Twitter</a>
             <a href="mailto:mike.seghers@gmail.com" class="btn_mail">Mail me</a>
         </div>
     </div>
@@ -402,7 +402,7 @@
 
         <div class="links clearfix">
             <a href="http://fr.linkedin.com/in/cyrillakech" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/cyril_lakech‎" class="btn_twitter">Twitter</a>
+            <a href="https://twitter.com/cyril_lakech" class="btn_twitter">Twitter</a>
             <a href="mailto:cyril.lakech@gmail.com" class="btn_mail">Mail me</a>
         </div>
     </div>
@@ -418,7 +418,7 @@
 
         <div class="links clearfix">
             <a href="http://nl.linkedin.com/in/royvanrijn" class="btn_linkedin">LinkedIn</a>
-            <a href="https://twitter.com/royvanrijn‎" class="btn_twitter">Twitter</a>
+            <a href="https://twitter.com/royvanrijn" class="btn_twitter">Twitter</a>
         </div>
     </div>
 </li>
@@ -432,7 +432,7 @@
         <p></p>
 
         <div class="links clearfix">
-            <a href="http://be.linkedin.com/in/stevenn‎" class="btn_linkedin">LinkedIn</a>
+            <a href="http://be.linkedin.com/in/stevenn" class="btn_linkedin">LinkedIn</a>
             <a href="https://twitter.com/stevenn" class="btn_twitter">Twitter</a>
         </div>
     </div>
@@ -447,7 +447,7 @@
         <p></p>
 
         <div class="links clearfix">
-            <a href="http://be.linkedin.com/in/geertvanlandeghem‎" class="btn_linkedin">LinkedIn</a>
+            <a href="http://be.linkedin.com/in/geertvanlandeghem" class="btn_linkedin">LinkedIn</a>
             <a href="https://twitter.com/gvanlandeghem" class="btn_twitter">Twitter</a>
             <a href="mailto:gvl@foundation.be" class="btn_mail">Mail me</a>
         </div>
