Added event date  :)

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,8 +5,8 @@
                 <div class="row">           
                     <div class="col9 content">
                         <h1>Born to be</h1>
-                        <h3>Edition 2013</h3>
-                        <p>Ready for your rebirth @Devoxx?</p>
+                        <h3>November 11-15 2013</h3>
+                        <p>Ready for your rebirth?</p>
                         <a href="#/schedule" class="btn hidden">Schedule</a>
                     </div>
                     <div class="col11">
