Fixes #38 Editing an already submitted proposal creates a new proposal? Fixes homepage track icon border Correct error handling for registration errors

--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -299,7 +299,7 @@ a {
     cursor: pointer;
 }
 
-.container .icon {
+.container .speakerIcon {
     display: block;
     background-size: 100px;
     background: #f8cb7a;
