Added bio of Louis

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -149,7 +149,7 @@
     <div class="popup">
         <h4>Louis Jacomet</h4>
 
-        <p></p>
+        <p>Software Engineer at Terracotta, Java and Scala enthusiast, love learning</p>
 
         <div class="links clearfix">
             <a href="http://be.linkedin.com/in/ljacomet" class="btn_linkedin">LinkedIn</a>
