fixed typo in proposal form

--- a/app/views/speaker/proposal_form.html
+++ b/app/views/speaker/proposal_form.html
@@ -183,7 +183,7 @@
 
             <div class="row" ng-show="model.talk.event && !isFormValid(model.talk, submitProposalForm)">
                 <div class="col12 push3">
-                    <div class="alert alert-danger">The proposal is incomplete, all field are mandatory except for the private message. Be sure to verify the number of tags, speakers and the length of the summary is withing the given limits.</div>
+                    <div class="alert alert-danger">The proposal is incomplete, all field are mandatory except for the private message. Be sure to verify the number of tags, speakers and the length of the summary is within the given limits.</div>
                 </div>
             </div>
 
