--- a/app/views/home.html
+++ b/app/views/home.html
@@ -312,7 +312,7 @@
                 <h2>What’s up? <span>#DEVOXX</span></h2>
             </div>
             <div class="col10 apps">
-                <h4>Schedule and interact!</h4>
+                <h4>Relive Devoxx 2012!</h4>
                 <a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2012" class="btn googleStore"></a>
                 <a href="https://itunes.apple.com/us/app/devoxx-2012-on-parleys.com/id589421953" class="btn appStore"></a>
             </div>
