Add href to the bars and restaurant links
I've added the correct href to the bars and restaurant links on the
practical/venue page. I've also added 2 more locations.

--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -1,4 +1,3 @@
-
 <div id="topinfo" class="area orange">
     <div class="grid">
 
@@ -80,13 +79,15 @@
                 <h4>Bars &amp; Restaurants</h4>
 
                 <ul class="linkList">
-                    <li><a>Taketwo</a> (0km)</li>
-                    <li><a>Matiate Kinepolis</a> (0km)</li>
-                    <li><a>Den Engel</a> (4km)</li>
-                    <li><a>Bier Central</a> (4km)</li>
-                    <li><a>Kelly's Irish Pub</a> (4km)</li>
-                    <li><a>Zao Wang</a> (sushi) (5km)</li>
-                    <li><a>Kulminator</a> (5km)</li>
+                    <li><a href="http://www.taketwo.be">Taketwo</a> (0km)</li>
+                    <li><a href="http://www.matiate.be">Matiate Kinepolis</a> (0km)</li>
+                    <li><a href="http://www.lapipedanvers.be">La Pipe d'Anvers (2km)</a></li>
+                    <li><a href="http://www.cafedenengel.be">Den Engel</a> (4km)</li>
+                    <li><a href="http://www.biercentral.be">Bier Central</a> (4km)</li>
+                    <li><a href="http://www.kellys.be">Kelly's Irish Pub</a> (4km)</li>
+                    <li><a href="http://www.patersvaetje.be">Paters Vaetje (5km)</a></li>
+                    <li><a href="http://www.zaowang.be">Zao Wang</a> (sushi) (5km)</li>
+                    <li><a href="https://plus.google.com/101699409585700684059">Kulminator</a> (5km)</li>
                 </ul>
 
             </div>
