added devoxx4kids NL news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,13 +132,22 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://www.devoxx.com/display/4KIDSNL/Home"><img src="../images/news/d4kids_nl.png" alt=""></a>
+                    <div class="date">8 June '13</div>
+                    <h4>Devoxx4Kids NL</h4>
+                    <p>The first <a href="http://www.devoxx.com/display/4KIDSNL/Home">Dutch Devoxx4Kids</a> event, organized
+                        by <a href="http://www.jpoint.nl/">JPoint</a> and the <a href="http://www.uva.nl/en/home">University of Amsterdam</a>
+                        was a great success. The kids enjoyed Arduino, Scratch and LEGO MindStorms sessions.
+                        <br><a href="http://www.devoxx.com/display/4KIDSNL/Home">Read more...</a></p>
+            </li>
+            <li>
                 <a href="#about"><img src="../images/news/site.png" alt=""></a>
                     <div class="date">6 June '13</div>
                     <h4>New site</h4>
-                    <p>Hope you like our brand new website?<br>It's built using AngularJS and the call for papers is available on 
+                    <p>Hope you like our brand new website?<br>It's built using AngularJS and the call for papers is available on
                         <a href="http://github.com/devoxx">github.com/devoxx</a>, we accept pull requests!
                         <br><a href="#about">Read more...</a></p>
-                
+
             </li>
             <li>
 
